Made the student main page look pretty, also created jquery static files. Now jquery will work. Also Alex got logging in working -- Connor

--- a/GradeTracker/templates/GradeTracker/basepage.html
+++ b/GradeTracker/templates/GradeTracker/basepage.html
@@ -8,16 +8,9 @@
   <meta name="keywords" content="website keywords, website keywords" />
   <meta http-equiv="content-type" content="text/html; charset=windows-1252" />
   <link rel="stylesheet" type="text/css" href="{% static 'GradeTracker/style.css' %}" title="style" />
-  <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">
-  <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-  <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
-  <script>
-  $(function() {
-    $( "#accordion" ).accordion({
-      collapsible: true
-    });
-  });
-  </script>
+  <link rel="stylesheet" href="{% static 'GradeTracker/jquery-ui.css' %}">
+  <script src="{% static 'GradeTracker/jquery-1.9.1.js' %}"></script>
+  <script src="{% static 'GradeTracker/jquery-ui.js' %}"></script>
 </head>
 
 <body>
@@ -26,14 +19,14 @@
       <div id="logo">
         <div id="logo_text">
           <!-- class="logo_colour", allows you to change the colour of the text -->
-          <h1><a href="index.html">Grade<span class="logo_colour">Tracker</span></a></h1>
+          <h1><a href="/GT/">Grade<span class="logo_colour">Tracker</span></a></h1>
           <h2>Simple way to calculate the grades you need to get.</h2>
         </div>
       </div>
       <div id="menubar">
         <ul id="menu">
           <!-- put class="selected" in the li tag for the selected page - to highlight which page you're on -->
-          <li><a href="index.html">Home</a></li>
+          <li><a href="/GT/">Home</a></li>
           <li><a href="GradeTracker/detail.html">Classes</a></li>
           <li><a href="page.html">A Page</a></li>
           <li><a href="another_page.html">Another Page</a></li>
@@ -51,4 +44,15 @@
     </div>
   </div>
 </body>
+  <script>
+  $(function() {
+    $( "#accordion1" ).accordion({
+    });
+  });
+  $(function() {
+    $( "#accordion" ).accordion({
+      collapsible: true
+    });
+  });
+  </script>
 </html>
