--- a/GradeTracker/templates/GradeTracker/grades.html
+++ b/GradeTracker/templates/GradeTracker/grades.html
@@ -1,12 +1,28 @@
-<h1>{{ student.fName}}</h1>
-<h2>{{ course.course_name }} </h2>
-<ul>
+{% extends "GradeTracker/basepage.html" %}
+{% block menubar %}
+          <li><a href="/GT/">Home</a></li>
+          <!-  Am only referencing list object 0, need to reference whatever student
+          name is clicked -->
+          <li><a href="/GT/{{ student_list.0.id}}/">Classes</a></li>
+          <li><a href="page.html">A Page</a></li>
+          <li><a href="another_page.html">Another Page</a></li>
+          <li><a href="/GT/accounts/logout">Logout</a></li>
+{% endblock %}
+
+{% block content %}
+<div id="accordion" >
 {% for grade in course.graded_activities_set.all %}
-    <li>{{ grade.activity_name }}: is worth {{ grade.grade_weight }} </li>
+   <h3><a href="/GT/{{ student.id }}/{{ course.id }}/"> {{ grade.activity_name }} </a></h3>
+   <div>
+        <div>
+		<h4>Weight: {{ grade.grade_weight }}</h4>
+        </div>
+    </div>
 {% endfor %}
-</ul>
+</div>
+
 <form action="/GT/{{ student.id }}/{{ course.id }}/" method="post">{% csrf_token %}
 {{ form.as_p }}
 <input type="submit" value="Submit" />
 </form>
-
+{% endblock %}
