--- a/GradeTracker/templates/GradeTracker/index.html
+++ b/GradeTracker/templates/GradeTracker/index.html
@@ -1,5 +1,14 @@
 {% extends "GradeTracker/basepage.html" %}
- 
+{% block menubar %}
+	  <li><a href="/GT/">Home</a></li>
+	  <!-  Am only referencing list object 0, need to reference whatever student
+	  name is clicked -->
+          <li><a href="/GT/{{ student_list.0.id}}/">Classes</a></li>
+          <li><a href="page.html">A Page</a></li>
+          <li><a href="another_page.html">Another Page</a></li>
+          <li><a href="/GT/accounts/logout">Logout</a></li>
+{% endblock %} 
+
 {% block content %}
 {% if student_list%}
    {% load staticfiles %} <!-- This loads the static keyword -->
