--- a/GradeTracker/templates/GradeTracker/grades.html
+++ b/GradeTracker/templates/GradeTracker/grades.html
@@ -19,6 +19,9 @@
 	<li>
 		<h4>Weight: {{ grade.grade_weight }}</h4>
 	</li>
+      <li>
+        <a href="/GT/editactivity/{{grade.id}}" >Edit Activity </a>
+      </li>
 	<li>
 		<a href="/GT/{{ student.id }}/{{ course.id }}/{{ grade.id }}">Add Subactivity</a>
 	</li>
