figured out subactivities

--- a/GradeTracker/templates/GradeTracker/activities.html
+++ b/GradeTracker/templates/GradeTracker/activities.html
@@ -13,7 +13,7 @@
 <h1>{{ activity.activity_name }}</h1>
 <div id="accordion" >
 {% for activ in activity.subgraded_activities_set.all %}
-   <h3><a href="/GT/{{ student.id }}/{{ course.id }}/{{ graded_activity_id }}"> {{activ.subactivity_name }} </a></h3>
+   <h3><a href="/GT/{{ student.id }}/{{ course.id }}/{{ graded_activity.id }}"> {{activ.subactivity_name }} </a></h3>
    <div>
 	<ul>
 	<li>
@@ -26,7 +26,7 @@
 {% endfor %}
 </div>
 
-<form action="/GT/{{ student.id }}/{{ course.id }}/{{ graded_activity_id }}" method="post">{% csrf_token %}
+<form action="/GT/{{ student.id }}/{{ course.id }}/{{ graded_activity.id }}" method="post">{% csrf_token %}
 {{ form.as_p }}
 <input type="submit" value="Submit" />
 </form>
