working on the subactivities form

--- a/GradeTracker/templates/GradeTracker/activities.html
+++ b/GradeTracker/templates/GradeTracker/activities.html
@@ -10,6 +10,7 @@
 {% endblock %}
 
 {% block content %}
+<div>{{ activity.subgraded_activities_set.all }}</div>
 <h1>{{ activity.activity_name }}</h1>
 <div id="accordion" >
 {% for activ in activity.subgraded_activities_set.all %}
