Began creating a view and form to edit user information. can display all user info, code in accounttemp.html

--- a/GradeTracker/templates/GradeTracker/detail.html
+++ b/GradeTracker/templates/GradeTracker/detail.html
@@ -2,7 +2,7 @@
 {% block menubar %}
 	  <li><a href="/GT/">Home</a></li>
           <li><a href="/GT/{{ student.id }}/">Class</a></li>
-          <li><a href="page.html">A Page</a></li>
+          <li><a href="/GT/{{ student.id }}/account">Account Info</a></li>
           <li><a href="another_page.html">Another Page</a></li>
           <li><a href="/GT/accounts/logout">Logout</a></li>
 {% endblock %}
