--- a/GradeTracker/templates/GradeTracker/login.html
+++ b/GradeTracker/templates/GradeTracker/login.html
@@ -1,4 +1,12 @@
 {% extends 'GradeTracker/basepage.html' %}
+{% block menubar %}
+          <li><a href="/GT/">Home</a></li>
+          <!-  Am only referencing list object 0, need to reference whatever student
+          name is clicked -->
+          <li><a href="/GT/{{ student.id }}/">Classes</a></li>
+          <li><a href="">Account Info</a></li>
+          <li><a href="/GT/accounts/logout">Logout</a></li>
+{% endblock %}
 
 {% block content %}
 	{% if form.errors %}
