added account edit and view for account details

--- a/GradeTracker/templates/GradeTracker/account.html
+++ b/GradeTracker/templates/GradeTracker/account.html
@@ -1,8 +1,7 @@
 {% extends "GradeTracker/basepage.html" %}
 {% block content %}
-<form action="/GT/{{ student_id }}/account/" method="post">{% csrf_token %}
+<form action="/GT/{{ student.id }}/account" method="post">{% csrf_token %}
 {{ form.as_p }}
 <input type="submit" value="Submit" />
 </form>
-
 {% endblock %}
