working on changing user account

--- a/GradeTracker/templates/GradeTracker/accountInfo.html
+++ b/GradeTracker/templates/GradeTracker/accountInfo.html
@@ -16,15 +16,23 @@
    <div>
 	<ul>
 		<li>
-			{{ user.first_name }}	
+			<p>Username: {{ user.username }}<p>	
 		</li>
 
 		<li>
-			{{ user.last_name }}
+			<p>Email: {{ user.email }}</p>
 		</li>
 
 		<li>
-			{{ user.email }}
+			<p>First Name: {{ user.first_name }}</p>
+		</li>
+
+		<li>
+			<p>Last Name: {{ user.last_name }}</p>
+		</li>
+			
+		<li>
+			<p>Institution: {{ student.Institution }}</p>
 		</li>
 	</ul>
    </div>
