--- a/GradeTracker/templates/GradeTracker/detail.html
+++ b/GradeTracker/templates/GradeTracker/detail.html
@@ -36,4 +36,7 @@
 <input type="submit" value="Submit" />
 </form>
 </div>
+{% for course in course %}
+<p>course.course_name</p>
+{% endfor %}
 {% endblock %}
