--- a/GradeTracker/templates/GradeTracker/grades.html
+++ b/GradeTracker/templates/GradeTracker/grades.html
@@ -25,6 +25,9 @@
 		<li>
 			<a href="/GT/{{ student.id }}/{{ course.id }}/{{ activity.id }}">Add Subactivity</a>
 		</li>
+		<li>
+			 <a href="/GT/deleteactivity/{{ activity.id }}/" >Delete Activity </a>
+		</li>
 	</ul>
    </div>
 {% endfor %}
