--- a/GradeTracker/static/GradeTracker/style.css
+++ b/GradeTracker/static/GradeTracker/style.css
@@ -293,3 +293,11 @@ table tr td
 { background: #F0EFE2;
   color: #47433F;
   border-top: 1px solid #FFF;}
+
+/*Remove spinners (up and down arrows) from decimal inputs*/
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    /* display: none; <- Crashes Chrome on hover */
+    -webkit-appearance: none;
+    margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+}
