--- a/GradeTracker/templates/GradeTracker/whatIfPage.html
+++ b/GradeTracker/templates/GradeTracker/whatIfPage.html
@@ -1,11 +1,11 @@
 <html>
 <head>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+  <!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script> -->
 
-  <script src="js/simple-slider.js"></script>
+  <script src="{% static 'GradeTracker/simple-slider.js' %}"></script>
 
-  <link href="css/simple-slider.css" rel="stylesheet" type="text/css" />
-  <link href="css/simple-slider-volume.css" rel="stylesheet" type="text/css" />  
+  <link href="{% static 'GradeTracker/simple-slider.css' %} " rel="stylesheet" type="text/css" />
+  <link href="{% static 'GradeTracker/simple-slider-volume.css' %}" rel="stylesheet" type="text/css" />  
   
   <!-- These styles are only used for this page, not required for the slider -->
   <style>
