debugging what if page

--- a/GradeTracker/templates/GradeTracker/whatIfPage.html
+++ b/GradeTracker/templates/GradeTracker/whatIfPage.html
@@ -4,8 +4,8 @@
 
   <script src="{% static 'GradeTracker/simple-slider.js' %}"></script>
 
-  <link href="{% static 'GradeTracker/simple-slider.css' %} " rel="stylesheet" type="text/css" />
-  <link href="{% static 'GradeTracker/simple-slider-volume.css' %}" rel="stylesheet" type="text/css" />  
+  <link rel="stylesheet" type="text/css" href="{% static 'GradeTracker/simple-slider.css' %} "  />
+  <link rel="stylesheet" type="text/css" href="{% static 'GradeTracker/simple-slider-volume.css' %}"  />  
   
   <!-- These styles are only used for this page, not required for the slider -->
   <style>
