--- a/GradeTracker/templates/GradeTracker/whatIfPage.html
+++ b/GradeTracker/templates/GradeTracker/whatIfPage.html
@@ -2,7 +2,7 @@
 <head>
   <!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script> -->
 
-  <script src="{% static 'GradeTracker/simple-slider.js' %}"></script>
+  <script type="text/javascript" src="{% static 'GradeTracker/simple-slider.js' %}"></script>
 
   <link rel="stylesheet" type="text/css" href="{% static 'GradeTracker/simple-slider.css' %} "  />
   <link rel="stylesheet" type="text/css" href="{% static 'GradeTracker/simple-slider-volume.css' %}"  />  
