debugging what if page

--- a/GradeTracker/templates/GradeTracker/whatIfPage.html
+++ b/GradeTracker/templates/GradeTracker/whatIfPage.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 
-{% block content %}
+{% block links %}
 
   <!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script> -->
 
@@ -22,8 +22,9 @@
   p { font-size: 15px; margin-bottom: 30px; }
   h2:first-of-type { margin-top: 0; }
   </style>
+{% endblock %}
 
-
+{% block content %}
 <body>
 
 	<h1>
