--- a/GradeTracker/templates/GradeTracker/basepage.html
+++ b/GradeTracker/templates/GradeTracker/basepage.html
@@ -4,12 +4,13 @@
 
 <head>
   <title>Grade-Tracker</title>
+  {% block links %}
+  {% endblock %}
   <meta name="description" content="website description" />
   <meta name="keywords" content="website keywords, website keywords" />
   <meta http-equiv="content-type" content="text/html; charset=windows-1252" />
   <link rel="stylesheet" type="text/css" href="{% static 'GradeTracker/style.css' %}" title="style" />
   <link rel="stylesheet" href="{% static 'GradeTracker/jquery-ui.css' %}">
-
 </head>
 
 <body>
