--- a/GradeTracker/templates/GradeTracker/whatIfPage.html
+++ b/GradeTracker/templates/GradeTracker/whatIfPage.html
@@ -5,7 +5,7 @@
 
 {% block links %}
 
-  <!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script> -->
+  <script src="{% static 'GradeTracker/jquery.min.js' %}"></script> 
 
   <script type="text/javascript" src="{% static 'GradeTracker/simple-slider.js' %}"></script>
 
