commented in basepage

--- a/GradeTracker/templates/GradeTracker/basepage.html
+++ b/GradeTracker/templates/GradeTracker/basepage.html
@@ -46,9 +46,9 @@
     </div>
   </div>
 </body>
-  <script src="{% static 'GradeTracker/jquery-1.9.1.js' %}"></script>
+<!--  <script src="{% static 'GradeTracker/jquery-1.9.1.js' %}"></script>
   <script src="{% static 'GradeTracker/jquery-ui.js' %}"></script>
-  <script>
+-->  <script>
   $(function() {
     $( "#accordion1" ).accordion({
     });
