--- a/GradeTracker/templates/GradeTracker/detail.html
+++ b/GradeTracker/templates/GradeTracker/detail.html
@@ -19,7 +19,7 @@
 		{% for activity in activities %}
 			<li style="margin-left:-10px">{{ activity.activity_name }}</li>
 			<ol><strong>Subactivities:</strong>
-			{% for subactivity in subactivities %}
+			{% for subactivity in activity.subgraded_activities_set.all %}
 			{% if subactivity.main_category == activity %}
 				<li style="margin-left:20px">{{ subactivity.subactivity_name }}</li>
 			{% endif %}
