--- a/GradeTracker/templates/GradeTracker/detail.html
+++ b/GradeTracker/templates/GradeTracker/detail.html
@@ -16,17 +16,17 @@
    <div>
    	<ul>
 		<ol><span style="margin-left:-30px"><strong>Activties:</strong></span>
-		{% for activity in activities %}
+		{% for activity in course.grade_activities_set.all %}
 			<li style="margin-left:-10px">{{ activity.activity_name }}</li>
 			{% if activity.subgraded_activities_set.all %}
-			<ol><strong>Subactivities:</strong>
-			{% for subactivity in activity.subgraded_activities_set.all %}
-			{% if subactivity.main_category == activity %}
-				<li style="margin-left:20px">{{ subactivity.subactivity_name }}</li>
-			{% endif %}
-			{% empty %}
-				<li>None</li>
-			{% endfor %}
+				<ol><strong>Subactivities:</strong>
+				{% for subactivity in activity.subgraded_activities_set.all %}
+					{% if subactivity.main_category == activity %}
+						<li style="margin-left:20px">{{ subactivity.subactivity_name }}</li>
+					{% endif %}
+					{% empty %}
+					<li>None</li>
+				{% endfor %}
 			{% endif %}
 			</ol>
 		{% empty %}
