--- a/GradeTracker/templates/GradeTracker/detail.html
+++ b/GradeTracker/templates/GradeTracker/detail.html
@@ -10,7 +10,7 @@
 
 {% block content %}
 <h1>{{ student.fName }}</h1>
-{{ courses }}
+{{ courses[0] }}
 <div id="accordion" >
 {% for course in courses %}
    <h3><a href="/GT/{{ student.id }}/{{ course.id }}/"> {{ course.course_name }} </a></h3>
