making the whatIf page dynamic

--- a/GradeTracker/templates/GradeTracker/whatIfPage.html
+++ b/GradeTracker/templates/GradeTracker/whatIfPage.html
@@ -25,6 +25,7 @@
 <body>
 
 	<h1>Activities</h1>
+      hello
       {{ course.graded_activities.all }}
 	<table>
       {% for category in course.graded_activites.all %}
