making the whatIf page dynamic

--- a/GradeTracker/templates/GradeTracker/whatIfPage.html
+++ b/GradeTracker/templates/GradeTracker/whatIfPage.html
@@ -26,7 +26,7 @@
 
 	<h1>Activities</h1>
       hello
-      {{ course.graded_activities.all }}
+      {{ course }}
 	<table>
       {% for category in course.graded_activites.all %}
 	<tr>
