--- a/GradeTracker/templates/GradeTracker/whatIfPage.html
+++ b/GradeTracker/templates/GradeTracker/whatIfPage.html
@@ -28,7 +28,7 @@
       hello
       {{ course }}
 	<table>
-      {% for category in course.graded_activites.all %}
+      {% for category in course.graded_activites_set.all %}
 	<tr>
             <td> test </td>
 		<td>{{ category.activity_name }}</td>
