Adjusted sliders in whatIfPage.html

--- a/GradeTracker/templates/GradeTracker/basepage.html
+++ b/GradeTracker/templates/GradeTracker/basepage.html
@@ -1,4 +1,4 @@
-{% load staticfiles %}
+'{% load staticfiles %}
 <!DOCTYPE HTML>
 <html>
 
@@ -48,8 +48,8 @@
     </div>
   </div>
 </body>
-
-<!--  <script src="{% static 'GradeTracker/jquery-1.9.1.js' %}"></script>
+<!--
+  <script src="{% static 'GradeTracker/jquery-1.9.1.js' %}"></script>
   <script src="{% static 'GradeTracker/jquery-ui.js' %}"></script>
 -->
   <script>
