changes to the what if page for course total slider ;

--- a/GradeTracker/templates/GradeTracker/whatIfPage.html
+++ b/GradeTracker/templates/GradeTracker/whatIfPage.html
@@ -65,7 +65,7 @@
         <input type='checkbox' id='check1' />
     </td>
     <td>
-      <input id="slidertotal" type="text" data-slider="true" value="0" data-slider-highlight="true" data-slider-theme="volume">
+      <input id="slidertotal" type="text" data-slider="true" value="{{ sum }} " data-slider-highlight="true" data-slider-theme="volume">
     </td>
 
    </tr>
