--- a/GradeTracker/templates/GradeTracker/whatIfPage.html
+++ b/GradeTracker/templates/GradeTracker/whatIfPage.html
@@ -34,7 +34,7 @@
 	<tr>
 		<td>{{ activity.activity_name }}</td>
 		<td>
-			<input type="number" name="{{activity_name}}-weight" min="0" max="1"
+			<input type="number" name="{{activity.activity_name}}-weight" min="0" max="1"
 				value="{{ activity.grade_weight }}" step=".05"/>
 		</td>
 	</tr>
