--- a/GradeTracker/templates/GradeTracker/detail.html
+++ b/GradeTracker/templates/GradeTracker/detail.html
@@ -43,6 +43,9 @@
 		<li>
 			<div><a href="/GT/deleteCourse/{{ course.id }}/" > Delete Course </a></div>
 		</li>
+		<li>
+			<div><a href="/GT/whatIf/{{ course.id }}/" > Delete Course </a></div>
+		</li>
 	</ul>
     </div>
 {% endfor %}
