added what if page

--- a/GradeTracker/templates/GradeTracker/detail.html
+++ b/GradeTracker/templates/GradeTracker/detail.html
@@ -44,7 +44,7 @@
 			<div><a href="/GT/deleteCourse/{{ course.id }}/" > Delete Course </a></div>
 		</li>
 		<li>
-			<div><a href="/GT/whatIf/{{ course.id }}/" > Delete Course </a></div>
+			<div><a href="/GT/whatIf/{{ course.id }}/" > What If Analysis </a></div>
 		</li>
 	</ul>
     </div>
